# graphly

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  graphly.config.toml  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_edit_python.py
.claude/skills/config-schema/: SKILL.md
src/config/: __init__.py  parser.py
src/loaders/: __init__.py  base.py  csv_loader.py
src/plotting/: __init__.py  base.py  matplotlib_plotter.py
test/config_test/: test_parser.py
test/loaders_test/: test_csv_loader.py  test_load_datafile.py
test/plotting_test/: test_matplotlib_plotter.py
test/test_data/: graphly.config.toml  ir_spectra_data - Molecule 1-2.csv
